Bug fixes and performance improvement, use dynamic value to align items vertically in less

--- a/client/src/Components/less/content0.less
+++ b/client/src/Components/less/content0.less
@@ -7,7 +7,7 @@
   height: 100vh;
   position: relative;
   text-align: center;
-  background-image: url("/images/gGlUMYGEIvjDOOw.jpg");
+  background-image: url("/images/bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -15,7 +15,8 @@
   &-wrapper {
     display: inline-block;
     position: absolute;
-    top: 20%;
+    top: calc(~'50% - 200px');
+    //transform: translateY(-50%);
     margin: auto;
     left: 0;
     right: 0;
